adding button for fill

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<button class='pallette btn btn-sm btn-danger' onclick="$('#color').spectrum('set', 'rgb(255,0,0)');setColor();">Red</button>
 		<button class='pallette btn btn-sm btn-success' onclick="$('#color').spectrum('set', 'rgb(0,255,0)');setColor();">Green</button>
 		<button class='pallette btn btn-sm btn-primary' onclick="$('#color').spectrum('set', 'rgb(0,0,255)');setColor();">Blue</button>
-		<button class='pallette btn btn-sm btn-primary' onclick="fill = true;">Fill</button>
+		<button class='pallette btn btn-sm btn-primary' onclick="setFill()">Fill</button>
 		
 		<button id='clear' class='btn btn-sm btn-danger' onclick='clearDisplay()'>Clear</button>
 
